fix: markdown library error fixed-1
text overflows at code (pre tag)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,3 +127,7 @@ button:active {
 .firebase-emulator-warning {
     display: none !important;
 }
+
+pre {
+    white-space: break-spaces;
+}
